--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,45 @@
 <resources>
-    <string name="app_name">SanYan</string>
+    <string name="app_name">闪验Test</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="umc_lable">SDK-API</string>
+    <string name="none_login1">隐式获取token</string>
+    <string name="layout_login">本机号码一键登录</string>
+    <string name="outh_login">短信验证码登录</string>
+    <string name="pre_getphone">预取号</string>
+    <string name="umc_get_user_info">获取用户信息</string>
+    <string name="user_authorization">获取户授权信息</string>
+    <string name="logout_authorization">注销账号</string>
+    <string name="order_page">订购页面</string>
+    <string name="select_user_state">查询用户状态</string>
+    <string name="select_sim_state">查询sim卡状态</string>
+    <string name="select_mobilenumberBill">话费及流量查询</string>
+    <string name="verify_mobileNumber">本机号码校验</string>
+    <string name="isTest">是否测试线</string>
+    <string name="switch_sms_login">短信登录开关</string>
+    <string name="umcsdk_test">  测试线</string>
+    <string name="umcsdk_grey">  灰度</string>
+    <string name="umcsdk_product">  现网</string>
+
+    <!--AndPermission-->
+    <string name="setting">设置</string>
+    <string name="resume">继续</string>
+    <string name="cancel">取消</string>
+    <string name="ok">确定</string>
+    <string name="no">拒绝</string>
+    <string name="permission_camera">相机</string>
+    <string name="permission_contact">联系人</string>
+    <string name="permission_location">位置</string>
+    <string name="permission_calendar">日历</string>
+    <string name="permission_microphone">麦克风</string>
+    <string name="permission_storage">内存</string>
+    <string name="permission_phone">手机</string>
+    <string name="permission_sensors">传感器</string>
+    <string name="permission_sms">短信</string>
+    <string name="successfully">成功</string>
+    <string name="failure">失败</string>
+    <string name="title_dialog">提示</string>
+    <string name="message_permission_rationale">同意以下权限才能使用相应功能</string>
+    <string name="message_permission_always_failed">此项功能需要这些权限，请在设置中开启</string>
+    <string name="permission_setting">权限设置</string>
 </resources>
